--- a/Signup.html/signup.html
+++ b/Signup.html/signup.html
@@ -189,8 +189,8 @@
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script>
     const USE_SUPABASE = true;
-    const SUPABASE_URL = "https://YOUR_PROJECT_ID.supabase.co";
-    const SUPABASE_ANON = "YOUR_PUBLIC_ANON_KEY";
+    const SUPABASE_URL = "https://gmtvmcywfvbgbqulmhlw.supabase.co";
+    const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdtdHZtY3l3ZnZiZ2JxdWxtaGx3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg0Njc3NzQsImV4cCI6MjA3NDA0Mzc3NH0.gWoasQWA6nzmH2ZrFtl6YcRnEEXhF5VaXpJVUYJaqvI";
     const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON);
   </script>
   -->
