--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>FindMyFreight — Where brokers and truckers meet.</title>
+  <title>PostMyFreight — Where brokers and truckers meet.</title>
   <meta name="description" content="Pre-register to the lightweight directory that connects independent brokers and drivers without the noise or high costs." />
   <style>
     :root {
@@ -64,7 +64,7 @@
 <body>
   <div class="wrap">
     <div class="hero">
-      <span class="badge">FindMyFreight.com</span>
+      <span class="badge">PostMyFreight.com</span>
       <h1>Where brokers and truckers meet.</h1>
       <p class="sub">We’re building a lightweight directory to connect independent brokers and drivers without the noise or high costs.</p>
       <p class="cred">Already indexing <strong>100,000+</strong> public carriers and brokers from FMCSA data. Claim your spot below.</p>
@@ -180,7 +180,7 @@
       </form>
     </div>
     <p class="foot" style="text-align:center; margin-top:14px">
-      Questions? Email <a href="mailto:hello@findmyfreight.com">hello@findmyfreight.com</a>
+      Questions? Email <a href="mailto:rowanhagenson@gmail.com">rowanhagenson@gmail.com=</a>
     </p>
   </div>
 
