--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       </form>
     </div>
     <p class="foot" style="text-align:center; margin-top:14px">
-      Questions? Email <a href="mailto:rowanhagenson@gmail.com">rowanhagenson@gmail.com=</a>
+      Questions? Email <a href="mailto:rowanhagenson@gmail.com">rowanhagenson@gmail.com</a>
     </p>
   </div>
 
