--- a/index.html
+++ b/index.html
@@ -183,8 +183,13 @@
               <div>
                 <label for="radius" id="radiusLabel">Radius (miles)</label>
                 <select id="radius" name="radius">
-                  <option value="">Select</option>
-                  <option>100</option><option>250</option><option>500</option><option>Nationwide</option>
+                   <option value="">Select</option>
+                   <option>25</option>
+                   <option>50</option>
+                   <option>100</option>
+                   <option>250</option>
+                   <option>500</option>
+                   <option>Nationwide</option>
                 </select>
               </div>
             </div>
