--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     </div>
 
     <p class="footer">
-      Questions? Email <a href="mailto:hello@postmyfreight.com">hello@postmyfreight.com</a>
+      Questions? Email <a href="mailto:rowanhagenson@gmail.com">rowanhagenson@gmail.com</a>
     </p>
   </div>
 
